--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
+    "joi": "^18.0.2",
+    "ky": "^1.14.1",
+    "lucide-react": "^0.555.0",
+    "next": "16.0.6",
+    "oxide": "^0.0.3",
+    "react": "19.2.0",
+    "react-day-picker": "^9.11.3",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.69.0",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2",
+    "vanta": "^0.5.24",
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -19,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
